P2020 Annonce 10 : Optional XSD verify